# egui-elegant

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: gh-pages.yml
api/: crates.js  help.html  settings.html  src-files.js
api/egui_elegant/: all.html  enum.ElegantFont.html  enum.MonaspaceFont.html  enum.ThemeMode.html  enum.Variant.html  fn.get_os_accent_color.html  fn.is_system_dark_mode.html  index.html  macro.impl_flex_widget!.html  macro.impl_flex_widget.html  sidebar-items.js  struct.Alert.html  struct.Avatar.html  struct.Card.html  struct.ElegantAccordion.html  struct.ElegantBadge.html  struct.ElegantButton.html  struct.ElegantDropdown.html  struct.ElegantTabs.html  struct.ElegantTagInput.html  struct.ElegantTheme.html  struct.ElegantToast.html  struct.Progress.html  struct.Skeleton.html  trait.Elegant.html  trait.InputUiExtensions.html
api/egui_elegant/accordion/: struct.ElegantAccordion.html
api/egui_elegant/alert/: struct.Alert.html
api/egui_elegant/avatar/: struct.Avatar.html
api/egui_elegant/badge/: struct.ElegantBadge.html
api/egui_elegant/button/: struct.ElegantButton.html
api/egui_elegant/card/: struct.Card.html
api/egui_elegant/dropdown/: struct.ElegantDropdown.html
api/egui_elegant/inputs/: trait.InputUiExtensions.html
api/egui_elegant/progress/: struct.Progress.html
api/egui_elegant/skeleton/: struct.Skeleton.html
api/egui_elegant/tabs/: struct.ElegantTabs.html
api/egui_elegant/taginput/: struct.ElegantTagInput.html
api/search.index/: 08121f784a.js  19db8e1d28.js  1c94c9ed76.js  2168752277.js  2b36e86130.js  2fe6c46cb9.js  3760ac20d5.js  3f52083adc.js  4ba564b992.js  721d225160.js  root.js
docs/adrs/: 001-theming-architecture.md  002-font-handling-and-binary-size.md  003-flex-layout-integration.md  004-hybrid-layout-for-nested-flex.md  005-unified-elegant-trait.md  006-visual-regression-and-automated-screenshots.md
examples/: async_theme.rs  render_docs.rs  showcase_noflex.rs
showcase/: index.html  website-9d5977be6f9a1668.js  website-c533a53658ad3c98.js  website-f97f68dc0b750842.js
src/: accordion.rs  alert.rs  avatar.rs  badge.rs  button.rs  card.rs  dropdown.rs  inputs.rs  lib.rs  progress.rs  skeleton.rs  tabs.rs  taginput.rs  theme.rs  toast.rs
tests/: visual.rs
website/: Cargo.toml  index.html
website/src/: app.rs  main.rs
(+51 files in other folders)
