[package]
name = "website"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
egui = "0.35"
eframe = "0.35"
egui-elegant = { path = "..", features = ["flex"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document", "Element"] }

[profile.release]
opt-level = 's' # Optimize for size
lto = true      # Enable Link Time Optimization (smaller and faster)
codegen-units = 1 # Maximize size reduction at the cost of compile time
panic = 'abort' # Remove panic unwinding machinery
